# cb-hackathon-cityzen

./: .gitignore  CONTRIBUTING.md  README.md
cityzen/: .example.env  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
cityzen/frontend/: .gitignore  package.json
cityzen/src/api/: route.ts
cityzen/src/api/pinecone/: route.ts
cityzen/src/app/: globals.css  layout.tsx  page.tsx
cityzen/src/app/components/: AnimatedBox.tsx  CityHallResults.tsx  DrawerMenu.tsx  EmailTemplate.tsx  EventsResults.tsx  Footer.tsx  MainContentResult.tsx  NewsArticles.tsx  ScrollingChips.tsx  Skeleton.tsx  VotingPolls.tsx  eventCarousel.tsx  flexibleChips.tsx  gradientCard.tsx  index.tsx  modernButton.tsx  sample.ts  test json.txt
etl/: Dockerfile  alembic.ini  db.py  extract_news.py  extract_transcripts.py  fetch_audio_files.py  fetch_la_video_metadata.py  fetch_news.py  fetch_transcripts.py  load_news.py  load_transcripts.py  pinecone_store.py  process_html.py  pyproject.toml  queries.py  requirements.txt  start_docker.sh  transcribe_audio.py  transcribe_chunked_audio.py  transcribe_google.py  upload_transcripts.py
etl/alembic/: env.py
etl/alembic/versions/: 8b50566e71b2_initial_migration.py
etl/data/: 03032021_jou.html
etl/fetchable_videos/: 2024.json
etl/llamacone/: indexer.py  query.py
etl/models/: newsapi_data.py  transcript_data.py
metrall-backend/: .env.example  main.py  pyproject.toml  sample_backend_response.json  sample_etl_raw_data.json
metrall-backend/llamacone/: query.py  query_tools.py  utils.py
(+12 files in other folders)
