[tool.poetry]
name = "metrall-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
python-dotenv = "^1.0.1"
llama-index = "^0.12.1"
pinecone = "^5.4.0"
llama-index-vector-stores-pinecone = "^0.4.1"
transformers = "^4.46.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
